<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/test_fragment_example_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/example_text_before"
                android:layout_marginTop="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Button
                android:id="@+id/change_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/example_text_button"/>

            <EditText
                android:id="@+id/test_fragment_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_text_hint"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/test_fragment_content_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/example_content_description"
                android:text="@string/example_content_description"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <CheckBox
                android:id="@+id/enabled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/checkbox_string"/>

            <CheckBox
                android:id="@+id/disabled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/checkbox_string_disabled"/>


            <Button
                android:id="@+id/offscreen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="700dp"
                android:text="@string/offscreen_button"/>

        </LinearLayout>

</androidx.core.widget.NestedScrollView>
